# szalony-pomylony-pomys-owy-przemyslnik2i3-4

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml  docs.yml  publish.yml  update-docs.yml
docs-site/: .dockerignore  Dockerfile  app.vue  nuxt.config.ts  package.json  tailwind.config.js
docs-site/components/: AppFooter.vue  AppHeader.vue  AppSidebar.vue  FeatureCard.vue  MermaidDiagram.vue
docs-site/pages/: [...slug].vue  index.vue
docs-site/public/: lang-data.json
docs-site/scripts/: parse_lang_data.py
examples/: full_system.hl  hello_holo.hl  laser_config.hl  tensor_graph.hl
hololang/: __init__.py  cli.py  runtime.py
hololang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hololang/crof/: __init__.py  adaptation.py  audit.py  compute.py  context.py  envelope.py  fabric.py  identity.py  interop.py  receiver.py  transform.py  validation.py
hololang/device/: __init__.py  holographic.py
hololang/mesh/: tile.py  (+3 more)
tests/: test_compiler.py  test_crof_adaptation.py  test_crof_audit.py  test_crof_compute.py  test_crof_context.py  test_crof_envelope.py  test_crof_fabric.py  test_crof_identity.py  test_crof_interop.py  test_crof_receiver.py  test_crof_validation.py  test_device.py  test_docs.py  test_embeddings.py  test_kernel32.py  test_lang_interpreter.py  test_lang_lexer.py  test_mesh.py  test_network.py  test_runtime.py  test_tensor.py  test_tensor_batch.py  test_tensor_modules.py  test_vm.py  test_vm_modules.py
(+50 files in other folders)
