[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hololang"
version = "0.1.0"
description = "HoloLang – a custom domain-specific language for holographic device control, tensor processing, and light-manipulation automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HoloLang Project" }]
keywords = [
    "holography",
    "laser",
    "galvanized-mirror",
    "tensor",
    "dsl",
    "machine-learning",
    "grpc",
    "websocket",
    "mesh",
    "virtual-machine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = []

[project.optional-dependencies]
network = ["websockets>=12.0", "grpcio>=1.60.0", "grpcio-tools>=1.60.0", "aiohttp>=3.9.0"]
tensor = ["numpy>=1.26.0"]
all = ["hololang[network,tensor]"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
hololang = "hololang.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hololang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
